--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
     }
     </script>
   </head>
+  <style>
+    body {
+      display: -webkit-flex;
+      display: flex;
+      -webkit-flex-direction: row;
+      flex-direction: column;
+      -webkit-align-items: center;
+      align-items: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      text-align: center;
+      font-size: 5em;
+    }
+  </style>
   <body>
     <div class="question">
       <p>TRUMP's WALL</p>
